// Activity 服务 Proto 定义文件
syntax = "proto3";

package activity;

option go_package = "./activity";

// ============================================================================
// 公共消息定义
// ============================================================================

// Tag 标签信息
message Tag {
  int64 id = 1;      // 标签ID
  string name = 2;   // 标签名称
  string color = 3;  // 标签颜色
  string icon = 4;   // 标签图标
}

// Category 分类信息
message Category {
  int64 id = 1;      // 分类ID
  string name = 2;   // 分类名称
  string icon = 3;   // 分类图标
  int32 sort = 4;    // 排序权重
}

// Pagination 分页信息
message Pagination {
  int32 page = 1;        // 当前页码
  int32 page_size = 2;   // 每页数量
  int64 total = 3;       // 总记录数
  int32 total_pages = 4; // 总页数
}

// ActivityDetail 活动详情（完整信息）
message ActivityDetail {
  int64 id = 1;
  string title = 2;
  string cover_url = 3;
  int32 cover_type = 4;               // 1=图片, 2=视频
  string content = 5;                 // 富文本
  int64 category_id = 6;
  string category_name = 7;
  int64 organizer_id = 8;
  string organizer_name = 9;
  string organizer_avatar = 10;
  string contact_phone = 11;          // 脱敏
  int64 register_start_time = 12;     // 时间戳秒
  int64 register_end_time = 13;
  int64 activity_start_time = 14;
  int64 activity_end_time = 15;
  string location = 16;
  string address_detail = 17;
  double longitude = 18;
  double latitude = 19;
  int32 max_participants = 20;        // 0=不限
  int32 current_participants = 21;
  bool require_approval = 22;
  bool require_student_verify = 23;
  int32 min_credit_score = 24;
  int32 status = 25;                  // 0-6
  string status_text = 26;
  string reject_reason = 27;
  int64 view_count = 28;
  int64 like_count = 29;
  repeated Tag tags = 30;
  int64 created_at = 31;
  int64 updated_at = 32;
  int32 version = 33;                 // 乐观锁版本号
}

// ActivityListItem 活动列表项（简化信息）
message ActivityListItem {
  int64 id = 1;
  string title = 2;
  string cover_url = 3;
  int32 cover_type = 4;
  string category_name = 5;
  string organizer_name = 6;
  string organizer_avatar = 7;
  int64 activity_start_time = 8;
  string location = 9;
  int32 max_participants = 10;
  int32 current_participants = 11;
  int32 status = 12;
  string status_text = 13;
  repeated Tag tags = 14;
  int64 view_count = 15;
  int64 created_at = 16;
}

// ============================================================================
// ActivityService 活动服务（外部）- 供 Gateway API 调用
// ============================================================================

service ActivityService {
  // ==================== CRUD 接口 ====================
  rpc CreateActivity(CreateActivityReq) returns (CreateActivityResp);
  rpc UpdateActivity(UpdateActivityReq) returns (UpdateActivityResp);
  rpc DeleteActivity(DeleteActivityReq) returns (DeleteActivityResp);
  rpc GetActivity(GetActivityReq) returns (GetActivityResp);
  rpc ListActivities(ListActivitiesReq) returns (ListActivitiesResp);

  // ==================== 状态操作接口 ====================
  rpc SubmitActivity(SubmitActivityReq) returns (SubmitActivityResp);
  rpc ApproveActivity(ApproveActivityReq) returns (ApproveActivityResp);
  rpc RejectActivity(RejectActivityReq) returns (RejectActivityResp);
  rpc CancelActivity(CancelActivityReq) returns (CancelActivityResp);

  // ==================== 搜索接口 ====================
  rpc SearchActivities(SearchActivitiesReq) returns (SearchActivitiesResp);
  rpc GetHotActivities(GetHotActivitiesReq) returns (GetHotActivitiesResp);

  // ==================== 分类标签接口 ====================
  rpc ListCategories(ListCategoriesReq) returns (ListCategoriesResp);
  rpc ListTags(ListTagsReq) returns (ListTagsResp);

  // ==================== 浏览量接口 ====================
  rpc IncrViewCount(IncrViewCountReq) returns (IncrViewCountResp);

  // ==================== 内部接口（供其他微服务调用）====================
  // 获取活动基本信息（User/Chat 服务调用）
  rpc GetActivityBasic(GetActivityBasicReq) returns (GetActivityBasicResp);
  // 批量获取活动基本信息
  rpc BatchGetActivityBasic(BatchGetActivityBasicReq) returns (BatchGetActivityBasicResp);
  // 获取用户已发布的活动列表（User 服务调用，用于展示用户主页）
  rpc GetUserPublishedActivities(GetUserPublishedActivitiesReq) returns (GetUserPublishedActivitiesResp);
}

// ============================================================================
// CRUD 接口消息定义
// ============================================================================

message CreateActivityReq {
  string title = 1;
  string cover_url = 2;
  int32 cover_type = 3;
  string content = 4;
  int64 category_id = 5;
  string contact_phone = 6;
  int64 register_start_time = 7;
  int64 register_end_time = 8;
  int64 activity_start_time = 9;
  int64 activity_end_time = 10;
  string location = 11;
  string address_detail = 12;
  double longitude = 13;
  double latitude = 14;
  int32 max_participants = 15;
  bool require_approval = 16;
  bool require_student_verify = 17;
  int32 min_credit_score = 18;
  repeated int64 tag_ids = 19;
  bool is_draft = 20;
  // Gateway 传入
  int64 organizer_id = 21;
  string organizer_name = 22;
  string organizer_avatar = 23;
}

message CreateActivityResp {
  int64 id = 1;
  int32 status = 2;
}

message UpdateActivityReq {
  int64 id = 1;
  int32 version = 2;
  optional string title = 3;
  optional string cover_url = 4;
  optional int32 cover_type = 5;
  optional string content = 6;
  optional int64 category_id = 7;
  optional string contact_phone = 8;
  optional int64 register_start_time = 9;
  optional int64 register_end_time = 10;
  optional int64 activity_start_time = 11;
  optional int64 activity_end_time = 12;
  optional string location = 13;
  optional string address_detail = 14;
  optional double longitude = 15;
  optional double latitude = 16;
  optional int32 max_participants = 17;
  optional bool require_approval = 18;
  optional bool require_student_verify = 19;
  optional int32 min_credit_score = 20;
  repeated int64 tag_ids = 21;
  bool update_tags = 22;
  int64 operator_id = 23;
}

message UpdateActivityResp {
  int32 status = 1;
  int32 new_version = 2;
}

message DeleteActivityReq {
  int64 id = 1;
  int64 operator_id = 2;
  bool is_admin = 3;
}

message DeleteActivityResp {
  bool success = 1;
}

message GetActivityReq {
  int64 id = 1;
  int64 viewer_id = 2;
}

message GetActivityResp {
  ActivityDetail activity = 1;
}

message ListActivitiesReq {
  int32 page = 1;
  int32 page_size = 2;
  int64 category_id = 3;
  int32 status = 4;           // -1=公开状态, -2=全部
  int64 organizer_id = 5;
  string sort = 6;            // created_at, hot, start_time
  int64 viewer_id = 7;
  bool is_admin = 8;
}

message ListActivitiesResp {
  repeated ActivityListItem list = 1;
  Pagination pagination = 2;
}

// ============================================================================
// 状态操作接口消息定义
// ============================================================================

message SubmitActivityReq {
  int64 id = 1;
  int64 operator_id = 2;
}

message SubmitActivityResp {
  int32 status = 1;
}

message ApproveActivityReq {
  int64 id = 1;
  int64 operator_id = 2;
}

message ApproveActivityResp {
  int32 status = 1;
}

message RejectActivityReq {
  int64 id = 1;
  string reason = 2;
  int64 operator_id = 3;
}

message RejectActivityResp {
  int32 status = 1;
}

message CancelActivityReq {
  int64 id = 1;
  string reason = 2;
  int64 operator_id = 3;
  bool is_admin = 4;
}

message CancelActivityResp {
  int32 status = 1;
}

// ============================================================================
// 搜索接口消息定义
// ============================================================================

message SearchActivitiesReq {
  string keyword = 1;
  int64 category_id = 2;
  int32 page = 3;
  int32 page_size = 4;
  string sort = 5;            // relevance, time, hot
}

message SearchActivitiesResp {
  repeated ActivityListItem list = 1;
  int64 total = 2;
  int32 query_time_ms = 3;
}

message GetHotActivitiesReq {
  int32 limit = 1;
}

message GetHotActivitiesResp {
  repeated ActivityListItem list = 1;
}

// ============================================================================
// 分类标签接口消息定义
// ============================================================================

message ListCategoriesReq {
}

message ListCategoriesResp {
  repeated Category list = 1;
}

message ListTagsReq {
  int32 limit = 1;
}

message ListTagsResp {
  repeated Tag list = 1;
}

// ============================================================================
// 浏览量接口消息定义
// ============================================================================

message IncrViewCountReq {
  int64 id = 1;
  int64 user_id = 2;
  string client_ip = 3;
}

message IncrViewCountResp {
  int64 view_count = 1;
}

// ============================================================================
// 内部接口消息定义（供其他微服务调用）
// ============================================================================

message GetActivityBasicReq {
  int64 id = 1;
}

message GetActivityBasicResp {
  int64 id = 1;
  string title = 2;
  int32 status = 3;
  string cover_url = 4;
  int32 cover_type = 5;
  string location = 6;
  int64 activity_start_time = 7;
  int64 activity_end_time = 8;
  int32 max_participants = 9;
  int32 current_participants = 10;
  int64 organizer_id = 11;
  string organizer_name = 12;
  string organizer_avatar = 13;
  string category_name = 14;
}

message BatchGetActivityBasicReq {
  repeated int64 ids = 1;    // 最多100个
}

message BatchGetActivityBasicResp {
  repeated GetActivityBasicResp activities = 1;
}

// 获取用户已发布的活动列表
message GetUserPublishedActivitiesReq {
  int64 user_id = 1;         // 用户ID
  int32 page = 2;
  int32 page_size = 3;
  int32 status = 4;          // -1=已发布(2,3,4), -2=全部, 具体值=筛选该状态
}

message GetUserPublishedActivitiesResp {
  repeated ActivityListItem list = 1;
  Pagination pagination = 2;
}

//
// 文件说明：
//   定义活动模块的所有 gRPC 服务接口。
//   - ActivityService: 外部服务，供 Gateway API 调用
//   - ActivityInternalService: 内部服务，供其他微服务调用
//
// 字段编号规划：
//   - 1-50：基础字段
//   - 51-80：扩展字段
//   - 81-100：预留字段
//   ⚠️ 警告：字段编号一旦发布使用后不可更改或复用！
//
// 生成命令：
//   cd app/activity/rpc
//   goctl rpc protoc activity.proto --go_out=. --go-grpc_out=. --zrpc_out=. --style go_zero
//

